<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/homeFragment"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/label1"/>
        <item
            android:id="@+id/cartFragment"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_add_shopping_cart_24"
            android:title="@string/label2"/>
        <item
            android:id="@+id/ordersFragment"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_library_books_24"
            android:title="@string/label3"/>
        <item
            android:id="@+id/accountFragment"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/label4"/>

</menu>