<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">
  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">
      <ImageView
          android:id="@+id/signup_image_view"
          android:layout_width="0dp"
          android:layout_height="280dp"
          android:contentDescription="@string/bg_img_desc"
          android:scaleType="fitStart"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:srcCompat="@drawable/login_bg_img"
          tools:ignore="VectorDrawableCompat"/>
      <TextView
          android:id="@+id/signup_welcome_hello_tv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="64dp"
          android:text="@string/signup_welcome_hello"
          android:textColor="@color/white"
          android:textSize="22sp"
          app:layout_constraintStart_toStartOf="@id/signup_image_view"
          app:layout_constraintTop_toTopOf="@id/signup_image_view"
          android:layout_marginLeft="16dp" />

      <TextView
          android:id="@+id/signup_welcome_text_view"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:text="@string/signup_welcome_text"
          android:textColor="@color/white"
          android:textStyle="bold"
          android:textSize="40dp"
          app:layout_constraintStart_toStartOf="@id/signup_image_view"
          app:layout_constraintTop_toBottomOf="@+id/signup_welcome_hello_tv"
          android:layout_marginLeft="16dp" />

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/textInputLayout1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/signup_image_view"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          android:layout_marginRight="16dp"
          android:layout_marginLeft="16dp"
          android:layout_marginTop="24dp"
          app:helperText="required"
          app:expandedHintEnabled="false"
          android:hint="name"
          app:hintTextColor="@color/purple_700"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          >
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/textInputLayout2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/textInputLayout1"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          android:layout_marginRight="16dp"
          android:layout_marginLeft="16dp"
          android:layout_marginTop="16dp"
          app:helperText="required"
          app:expandedHintEnabled="false"
          android:hint="Email"
          app:hintTextColor="@color/purple_700"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          >
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/Email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />

      </com.google.android.material.textfield.TextInputLayout>
      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/textInputLayout7"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/textInputLayout2"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          android:layout_marginRight="16dp"
          android:layout_marginLeft="16dp"
          app:expandedHintEnabled="false"
          android:layout_marginTop="16dp"
          app:passwordToggleEnabled="true"
          app:helperText="required"
          android:hint="Password"
          app:hintTextColor="@color/purple_700"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          >
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />

      </com.google.android.material.textfield.TextInputLayout>
      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/textInputLayout8"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/textInputLayout7"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          android:layout_marginRight="16dp"
          android:layout_marginLeft="16dp"
          android:layout_marginTop="16dp"
          app:passwordToggleEnabled="true"
          app:helperText="required"
          app:expandedHintEnabled="false"
          android:hint="Confirm Password"
          app:hintTextColor="@color/purple_700"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          >
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/confirmpassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/textInputLayout3"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/textInputLayout8"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          android:layout_marginRight="16dp"
          android:layout_marginLeft="16dp"
          app:expandedHintEnabled="false"
          android:layout_marginTop="16dp"
          app:helperText="required"
          android:hint="Phone"
          app:hintTextColor="@color/purple_700"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          >
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/Phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/textInputLayout4"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/textInputLayout3"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          android:layout_marginRight="16dp"
          android:layout_marginLeft="16dp"
          android:layout_marginTop="16dp"
          app:helperText="required"
          app:expandedHintEnabled="false"
          android:hint="Addresse"
          app:hintTextColor="@color/purple_700"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          >
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/Addresse"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />

      </com.google.android.material.textfield.TextInputLayout>

      <LinearLayout
          android:id="@+id/layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          app:layout_constraintTop_toBottomOf="@id/textInputLayout4"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          android:layout_marginRight="16dp"
          android:layout_marginLeft="16dp"
          android:layout_marginTop="16dp"
          >
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayout6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginLeft="4dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="16dp"
             app:helperText="required"
             android:hint="City"
             app:hintTextColor="@color/purple_700"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Ville"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
         </com.google.android.material.textfield.TextInputLayout>
      </LinearLayout>

      <Button
          android:id="@+id/button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="Valider"
          app:layout_constraintTop_toBottomOf="@id/layout"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          android:layout_marginRight="16dp"
          android:layout_marginLeft="16dp"
          android:layout_marginTop="16dp"
          />


   </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>